--- a/kiraye-car/src/components/styles/homepage.css
+++ b/kiraye-car/src/components/styles/homepage.css
@@ -31,3 +31,12 @@
     padding: 0;
     margin: 0;
 }
+
+.services-images{
+    background-image: url('../../images/Screenshot\ from\ 2020-05-13\ 15-55-19.png');
+    height: 45vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 920px;
+}
