--- a/kiraye-car/src/components/styles/homepage.css
+++ b/kiraye-car/src/components/styles/homepage.css
@@ -101,6 +101,13 @@
     display: block;
 }
 
+.circlePaper:hover {
+    -ms-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+    background-color: #0ebaba!important;
+}
+
 #driver:hover {
     background-image: url('https://www.revv.co.in/imgs/icons/wheel.png');
     animation: mask 1.5s 1 alternate;
@@ -159,14 +166,19 @@
 
 .hvr-icon-drop:active:before, .hvr-icon-drop:focus:before, .hvr-icon-drop:hover:before {
     opacity: 0;
-    transition-duration: .3s;
+    transition-duration: 1s;
     animation-name: hvr-icon-drop;
-    animation-duration: .5s;
+    animation-duration: 1s;
     animation-delay: .3s;
     animation-fill-mode: forwards;
     animation-timing-function: ease-in-out;
     animation-timing-function: cubic-bezier(.52,1.64,.37,.66);
     content: url('https://www.revv.co.in/imgs/icons/car-icons.png');
+}
+
+@keyframes hvr-icon-drop {
+    0% {transform: scale(2,2);}
+    50% {transform: scale(1,1);}
 }
 
 .hvr-icon-wobble-horizontal:before {
@@ -184,9 +196,13 @@
 
 .hvr-icon-wobble-horizontal:active:before, .hvr-icon-wobble-horizontal:focus:before, .hvr-icon-wobble-horizontal:hover:before {
     animation-name: hvr-icon-wobble-horizontal;
-    animation-duration: 1s;
+    animation-duration: 0.8s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
+}
+
+@keyframes hvr-icon-wobble-horizontal {
+    0% {transform: translate(13px,0px);}
 }
 
 .hvr-icon-wobble-horizontal {
