--- a/kiraye-car/src/components/styles/returncar.css
+++ b/kiraye-car/src/components/styles/returncar.css
@@ -1,3 +1,6 @@
-.backy-img{
+.backkk-img{
     background-image: url(../../images/lcckuse7idmy.jpg);
+    background-size: cover;
+   background-repeat: no-repeat;
+   background-attachment: fixed;
 }
